--- a/bike-stats.ipynb
+++ b/bike-stats.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "[100 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "Name: Precipitation_In, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "Name: Precipitation_In, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,54 +894,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   station_id                                       name        lat  \\\n",
-      "10      CD-01                    12th Ave & E Yesler Way  47.602103   \n",
-      "26      FH-01  Frye Art Museum / Terry Ave & Columbia St  47.607281   \n",
-      "38     SLU-18                     Dexter Ave & Denny Way  47.618285   \n",
-      "46      UW-01               UW McCarty Hall / Whitman Ct  47.660268   \n",
-      "\n",
-      "          long install_date  install_dockcount modification_date  \\\n",
-      "10 -122.316923    5/22/2015                 16          8/9/2016   \n",
-      "26 -122.324783   10/13/2014                 16         3/18/2016   \n",
-      "38 -122.342205   10/13/2014                 20         11/2/2015   \n",
-      "46 -122.304826   10/13/2014                 16        10/29/2015   \n",
-      "\n",
-      "    current_dockcount decommission_date  \n",
-      "10                  0          8/9/2016  \n",
-      "26                  0         3/18/2016  \n",
-      "38                  0          7/2/2016  \n",
-      "46                  0        10/29/2015  \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "lat                   47.625004\n",
-       "long                -122.327617\n",
-       "install_dockcount     17.629630\n",
-       "current_dockcount     17.740741\n",
-       "decommission_date           NaN\n",
-       "dtype: float64"
+       "16.517241379310345"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "station\n",
-    "dock_count=station[station['decommission_date'].notnull()]\n",
-    "print(dock_count)\n",
-    "general=station[station['decommission_date'].isnull()]\n",
-    "general.mean()"
+    "station.current_dockcount.mean()\n"
    ]
   },
   {
@@ -953,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +930,7 @@
        "-64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +958,7 @@
        "234"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
